json file added

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </main>
     <footer>© Copyright 2025 Siahe Guelable Curtis</footer>
 
-
+    <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
