--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <section>
-            <h3><a href="">Click Here To Download My Resume</a></h3>
+            <h3><a href="CV/blue professional modern CV resume (1).pdf">Click Here To Download My Resume</a></h3>
         </section>
         <section id="container">
             <h3>Career Highlights</h3>
@@ -122,7 +122,7 @@
         </section>
         <section>
             <div id="contacts">
-                <div>Email:</div>
+                <div>Email: curtissiahe18@gmail.com</div>
                 <div>Linkdln:</div>
             </div>
         </section>
