all detailed corrected

--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -123,7 +123,7 @@
         <section>
             <div id="contacts">
                 <div>Email: curtissiahe18@gmail.com</div>
-                <div>Linkdln: https://www.linkedin.com/in/curtissiahe18/ </div>
+                <div>Linkdln:   <a href="https://www.linkedin.com/in/curtissiahe18/"> Here You Go!</a></div>
             </div>
         </section>
 
