--- a/Landing page online course/index.html
+++ b/Landing page online course/index.html
@@ -131,7 +131,7 @@
 
             <div id="work">
                 <h1>How It Works</h1>
-            <p>Explore each module at your own pace, with video lectures, practical assignments, and quizzes to reinforce learning.</p>
+            <p id="maintext">Explore each module at your own pace, with video lectures, practical assignments, and quizzes to reinforce learning.</p>
             <div id="how-it-works">
                 <div>
                     <h1>Learn at Your Own Pace with Online Modules</h1>
@@ -246,7 +246,7 @@
                     <p><b>✔</b> 26 videos</p>
                     <p><b>✔</b> Audio and PDF materials</p>
                     <p><b>✔</b> 5 hours of video content</p>
-                    <p>$29</p>
+                    <p id="money">$29</p>
                     <button>Enroll Now</button>
                    
                 </div>
@@ -261,7 +261,7 @@
                     <p><b>✔</b> 5 hours of video content</p>
                     <p><b>✔</b> Engaging homework exercises</p>
                     <p><b>✔</b> Membership in Facebook group</p>
-                    <p>$59</p>
+                    <p id="money">$59</p>
                     <button>Enroll Now</button>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                     <p><b>✔</b> 5 hours of video content</p>
                     <p><b>✔</b> Engaging homework exercises</p>
                     <p><b>✔</b> Membership in Facebook group</p>
-                    <p>$99</p>
+                    <p id="money">$99</p>
                     <button>Enroll Now</button>
                 </div>
             </div>
