--- a/Landing_page_online_course/main_dashbord.html
+++ b/Landing_page_online_course/main_dashbord.html
@@ -25,9 +25,6 @@
       <a href="#"><i class="fas fa-qrcode"></i></a>
       <a href="#"><i class="fa-solid fa-globe"></i></a>
       <a href="#"><i class="fa-solid fa-moon"></i></a>
-      <button id="hamburger" aria-label="Open menu">
-  <i class="fas fa-bars"></i>
-</button>
     </div>
   </nav>
 
@@ -59,7 +56,7 @@
     </div>
 
     <section>
-      <header id="header">
+      <header id="">
         <p><h2>Latest Cryptocurrency News</h2></p>
             <ul id="crypto-news"></ul>
         </div>
@@ -102,8 +99,9 @@
       </div>
     </section>
   </footer>
+  <script src="scripts/cryptoApi.js"></script>
 
   <script src="scripts/scripts.js"></script>
-  <script src="scripts/cryptoApi.js"></script>
+  
 </body>
 </html>
